z-index fix in list view

--- a/app/themes/default/less/newui.less
+++ b/app/themes/default/less/newui.less
@@ -1157,6 +1157,10 @@ footer, header, hgroup, menu, nav, section {
 		}
 	}
 }
+.DynamicSearchView{
+    position: relative;
+    z-index: 9999;
+}
 
 /*=dashboard*/
 #HomePageView .AppContent{
